--- a/interfacesJava/nbproject/project.properties
+++ b/interfacesJava/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.jar=${dist.dir}/interfacesJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\jcalendar-1.3.3.jar
+file.reference.mysql-connector-java-5.1.16-bin.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\mysql-connector-java-5.1.16-bin.jar
 file.reference.ojdbc7.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\Oracle_Sql\\ojdbc7.jar
 file.reference.poi-3.16-beta2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\excel Apache Poi\\poi-3.16-beta2\\poi-3.16-beta2.jar
 file.reference.poi-examples-3.16-beta2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\excel Apache Poi\\poi-3.16-beta2\\poi-examples-3.16-beta2.jar
@@ -48,7 +49,8 @@ javac.classpath=\
     ${file.reference.poi-examples-3.16-beta2.jar}:\
     ${file.reference.poi-excelant-3.16-beta2.jar}:\
     ${file.reference.poi-scratchpad-3.16-beta2.jar}:\
-    ${file.reference.ojdbc7.jar}
+    ${file.reference.ojdbc7.jar}:\
+    ${file.reference.mysql-connector-java-5.1.16-bin.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
