--- a/interfacesJava/nbproject/project.properties
+++ b/interfacesJava/nbproject/project.properties
@@ -27,16 +27,19 @@ dist.dir=dist
 dist.jar=${dist.dir}/interfacesJava.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\commons-beanutils-1.8.0.jar
-file.reference.commons-collections-2.1.1.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\commons-collections-2.1.1.jar
-file.reference.commons-digester-2.1.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\commons-digester-2.1.jar
-file.reference.commons-javaflow-20060411.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\commons-javaflow-20060411.jar
-file.reference.commons-logging-1.1.1.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\commons-logging-1.1.1.jar
+file.reference.commons-beanutils-1.8.0.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\commons-beanutils-1.8.0.jar
+file.reference.commons-collections-2.1.1.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\commons-collections-2.1.1.jar
+file.reference.commons-digester-1.7.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\commons-digester-1.7.jar
+file.reference.commons-javaflow-20060411.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\commons-javaflow-20060411.jar
+file.reference.commons-logging-1.0.4.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\commons-logging-1.0.4.jar
+file.reference.commons-logging-api.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\commons-logging-api.jar
 file.reference.groovy-all-2.0.1.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\groovy-all-2.0.1.jar
-file.reference.iText-2.1.7.js2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\iText-2.1.7.js2.jar
-file.reference.jasperreports-5.5.0.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\jasperreports-5.5.0.jar
+file.reference.iText-2.1.7.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\iText-2.1.7.jar
+file.reference.jasperreports-4.0.2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\jasperreports-4.0.2.jar
+file.reference.jasperreports-applet-4.0.2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\jasperreports-applet-4.0.2.jar
+file.reference.jasperreports-fonts-4.0.2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\jasperreports-fonts-4.0.2.jar
+file.reference.jasperreports-javaflow-4.0.2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\TUTORIAL\\Librerias\\jasperreports-javaflow-4.0.2.jar
 file.reference.jcalendar-1.3.3.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\jcalendar-1.3.3.jar
-file.reference.log4j-1.2.15.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\log4j-1.2.15.jar
 file.reference.mysql-connector-java-5.1.16-bin.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\mysql-connector-java-5.1.16-bin.jar
 file.reference.ojdbc7.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\Oracle_Sql\\ojdbc7.jar
 file.reference.png-encoder-1.5.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\png-encoder-1.5.jar
@@ -46,7 +49,6 @@ file.reference.poi-excelant-3.16-beta2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\
 file.reference.poi-ooxml-3.16-beta2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\excel Apache Poi\\poi-3.16-beta2\\poi-ooxml-3.16-beta2.jar
 file.reference.poi-ooxml-schemas-3.16-beta2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\excel Apache Poi\\poi-3.16-beta2\\poi-ooxml-schemas-3.16-beta2.jar
 file.reference.poi-scratchpad-3.16-beta2.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\excel Apache Poi\\poi-3.16-beta2\\poi-scratchpad-3.16-beta2.jar
-file.reference.xalan-2.7.1.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\iReport\\LIB2\\librerias 5.5.0\\xalan-2.7.1.jar
 file.reference.xmlbeans-2.6.0.jar=C:\\Users\\CPU_SYS\\Desktop\\Carlos\\excel Apache Poi\\poi-3.16-beta2\\ooxml-lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.compress=false
@@ -62,17 +64,19 @@ javac.classpath=\
     ${file.reference.poi-scratchpad-3.16-beta2.jar}:\
     ${file.reference.ojdbc7.jar}:\
     ${file.reference.mysql-connector-java-5.1.16-bin.jar}:\
+    ${file.reference.groovy-all-2.0.1.jar}:\
+    ${file.reference.png-encoder-1.5.jar}:\
     ${file.reference.commons-beanutils-1.8.0.jar}:\
     ${file.reference.commons-collections-2.1.1.jar}:\
-    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-digester-1.7.jar}:\
     ${file.reference.commons-javaflow-20060411.jar}:\
-    ${file.reference.commons-logging-1.1.1.jar}:\
-    ${file.reference.groovy-all-2.0.1.jar}:\
-    ${file.reference.iText-2.1.7.js2.jar}:\
-    ${file.reference.jasperreports-5.5.0.jar}:\
-    ${file.reference.log4j-1.2.15.jar}:\
-    ${file.reference.png-encoder-1.5.jar}:\
-    ${file.reference.xalan-2.7.1.jar}
+    ${file.reference.commons-logging-1.0.4.jar}:\
+    ${file.reference.commons-logging-api.jar}:\
+    ${file.reference.iText-2.1.7.jar}:\
+    ${file.reference.jasperreports-4.0.2.jar}:\
+    ${file.reference.jasperreports-applet-4.0.2.jar}:\
+    ${file.reference.jasperreports-fonts-4.0.2.jar}:\
+    ${file.reference.jasperreports-javaflow-4.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
